--- a/package.json
+++ b/package.json
@@ -1,37 +1,50 @@
 {
   "name": "journal-bot",
   "version": "1.0.0",
-  "description": "A WhatsApp bot for journaling and note-taking",
-  "main": "dist/server.js",
+  "description": "A WhatsApp journaling bot with Next.js dashboard",
+  "main": "index.js",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=23.8.0"
   },
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon",
-    "build": "tsc",
-    "test": "jest",
-    "db:setup": "ts-node src/config/setup.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:setup": "ts-node src/config/setup.ts",
+    "test": "jest"
   },
+  "keywords": [
+    "whatsapp",
+    "journal",
+    "bot",
+    "nextjs",
+    "pwa"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.14.0",
-    "twilio": "^5.5.1",
-    "winston": "^3.11.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "@prisma/client": "^5.10.0",
+    "autoprefixer": "^10.4.21",
+    "mysql2": "^3.9.1",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
+    "next-pwa": "^5.6.0",
+    "postcss": "^8.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.17",
+    "twilio": "^4.22.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@types/twilio": "^3.19.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "prisma": "^5.10.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
