--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A WhatsApp bot for journaling and note-taking",
   "main": "dist/server.js",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "22.x"
   },
   "scripts": {
     "start": "node dist/server.js",
