--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
   "engines": {
     "node": "22.x"
   },
-  "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon",
-    "build": "tsc",
-    "test": "jest",
-    "db:setup": "ts-node src/config/setup.ts"
-  },
+"scripts": {
+  "start": "next start",
+  "dev": "next dev",
+  "build": "next build",
+  "test": "jest",
+  "db:setup": "ts-node src/config/setup.ts"
+},
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^7.1.0",
     "mysql2": "^3.14.0",
+    "next": "^15.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "twilio": "^5.5.1",
-    "winston": "^3.11.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.17.28",
+    "@types/react": "^19.0.12",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
