--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
   "engines": {
     "node": "22.x"
   },
-"scripts": {
-  "start": "next start",
-  "dev": "next dev",
-  "build": "next build",
-  "test": "jest",
-  "db:setup": "ts-node src/config/setup.ts"
-},
+  "scripts": {
+    "start": "next start",
+    "dev": "next dev",
+    "build": "next build",
+    "test": "jest",
+    "db:setup": "ts-node src/config/setup.ts"
+  },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@types/sequelize": "^4.28.20",
     "cors": "^2.8.5",
+    "critters": "^0.0.23",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^7.1.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sequelize": "^6.37.6",
     "twilio": "^5.5.1",
     "winston": "^3.11.0"
   },
