--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,17 @@ TWILIO_ACCOUNT_SID=your_account_sid_here
 TWILIO_AUTH_TOKEN=your_auth_token_here
 
 # Database Configuration
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=journal_db
+MYSQL_PUBLIC_URL=your_mysql_public_url_here
 
 # Server Configuration
 PORT=9000
+NODE_ENV=development
 
 # Logging Configuration
 LOG_LEVEL=info 
+
+# OpenAI API Key
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Gemini API Key
+GEMINI_API_KEY=your_gemini_api_key_here
