Update .env.example for MySQL configuration, enhance Dockerfile for multi-stage builds, and add docker-compose.yml for service orchestration

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ TWILIO_ACCOUNT_SID=your_account_sid_here
 TWILIO_AUTH_TOKEN=your_auth_token_here
 
 # Database Configuration
-MYSQL_PUBLIC_URL=your_mysql_public_url_here
+MYSQL_PUBLIC_URL=mysql://journal_user:journal_password@db:3306/journal_db
 
 # Server Configuration
 PORT=9000
